2003-05-05  Danny Smith  <dannysmith@users.sourceforge.net>

 	* include/commctrl.h (STATUSCLASSNAME, TOOLBARCLASSNAME,
	TOOLTIPS_CLASS, TRACKBAR_CLASS, UPDOWN_CLASS, PROGRESS_CLASS,
	HOTKEY_CLASS): Remove dupicate defines for UNICODE case.

2003-05-02  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/richedit.h (EM_FINDTEXTEXW, EM_FINDTEXTW,
	EM_GETAUTOURLDETECT, EM_GETBIDIOPTIONS, EM_GETEDITSTYLE,
	EM_GETIMECOLOR, EM_GETIMEOPTIONS, EM_GETPUNCTUATION,
	EM_GETWORDWRAPMODE, EM_RECONVERSION, EM_SETBIDIOPTIONS,
	EM_SETEDITSTYLE, EM_SETIMECOLOR, EM_SETIMEOPTIONS,
	EM_SETPALETTE, EM_SETPUNCTUATION, EM_SETTEXTEX,
	EM_SETWORDWRAPMODE, RICHEDIT_CLASS10A): Add defines.

2003-05-02  Francois Ferrand  <typz@sourceforge.users.net>

	* include/commctrl.h (TBM_*): Add missing trackbar defines.

2003-05-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cplext.h (CPLPAGE_MOUSE_WHEEL,
	CPLPAGE_DISPLAY_BACKGROUND): Add defines.

2003-04-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (DC_PEN, DC_BRUSH): Add defines.
	(SetDCPenColor, SetDCBrushColor): Add prototypes.
	* lib/gdi32.def (SetDCPenColor, SetDCBrushColor): Add stubs.

2003-04-26  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winioctl.h (DEVICE_TYPE_FROM_CTL_CODE): Add macro.

2003-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h (ITypeMarshal): Add interface.

2003-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h: Clean up formatting.
	(RETRIEVAL_POINTERS_BUFFER): Add fields to Extents[1] struct.
	(CREATE_DISK): Add _ANONYMOUS_UNION macro.
	(DISK_CACHE_INFORMATION): Likewise.
	(DISK_DETECTION_INFO): Likewise.
	(DISK_PARTITION_INFO): Likewise.
	(PARTITION_INFORMATION_EX): Likewise.
	(DRIVE_LAYOUT_INFORMATION_EX): Likewise.

2003-04-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winbase.h (DeleteVolumeMountPoint[AW],
	FindFirstVolumeMountPoint[AW], FindNextVolumeMountPoint[AW],