@@ -334,3 +334,6 @@ DEFINE_GUID(OLE_DATAPATH_WMF,0x2de03,0,0,0xc0,0,0,0,0,0,0,0x46);
 DEFINE_GUID(OLE_DATAPATH_XBM,0x2de08,0,0,0xc0,0,0,0,0,0,0,0x46);
 DEFINE_GUID(SID_SContainerDispatch,0xb722be00,0x4e68,0x101b,0xa2,0xbc,0,0xaa,0,0x40,0x47,0x70);
 DEFINE_GUID(SID_SDataPathBrowser,0xfc4801a5,0x2ba9,0x11cf,0xa2,0x29,0,0xaa,0,0x3d,0x73,0x52);
+DEFINE_GUID(CGID_Explorer,0x000214d0,0,0,0xc0,0,0,0,0,0,0,0x46); /* shlguid */
+DEFINE_GUID(CGID_ShellDocView,0x000214d1,0,0,0xc0,0,0,0,0,0,0,0x46); /* shlguid */
+DEFINE_GUID(CGID_ShellServiceObject,0x000214d2,0,0,0xc0,0,0,0,0,0,0,0x46); /* shlguid */
